log/build_2025-04-09_11-33-31/mobile_robotics/stdout_stderr.log
running develop
Removing /home/ricard/ros2_ws_puzzlebot/install/mobile_robotics/lib/python3.10/site-packages/mobile-robotics.egg-link (link to .)
running egg_info
writing ../../build/mobile_robotics/mobile_robotics.egg-info/PKG-INFO
writing dependency_links to ../../build/mobile_robotics/mobile_robotics.egg-info/dependency_links.txt
writing entry points to ../../build/mobile_robotics/mobile_robotics.egg-info/entry_points.txt
writing requirements to ../../build/mobile_robotics/mobile_robotics.egg-info/requires.txt
writing top-level names to ../../build/mobile_robotics/mobile_robotics.egg-info/top_level.txt
reading manifest file '../../build/mobile_robotics/mobile_robotics.egg-info/SOURCES.txt'
writing manifest file '../../build/mobile_robotics/mobile_robotics.egg-info/SOURCES.txt'
running build
running build_py
copying mobile_robotics/move_angle_given.py -> /home/ricard/ros2_ws_puzzlebot/build/mobile_robotics/build/lib/mobile_robotics
copying mobile_robotics/move_square.py -> /home/ricard/ros2_ws_puzzlebot/build/mobile_robotics/build/lib/mobile_robotics
running install
running install_lib
creating /home/ricard/ros2_ws_puzzlebot/install/mobile_robotics/lib/python3.10/site-packages/mobile_robotics
copying /home/ricard/ros2_ws_puzzlebot/build/mobile_robotics/build/lib/mobile_robotics/move_forward.py -> /home/ricard/ros2_ws_puzzlebot/install/mobile_robotics/lib/python3.10/site-packages/mobile_robotics
copying /home/ricard/ros2_ws_puzzlebot/build/mobile_robotics/build/lib/mobile_robotics/test_node.py -> /home/ricard/ros2_ws_puzzlebot/install/mobile_robotics/lib/python3.10/site-packages/mobile_robotics
copying /home/ricard/ros2_ws_puzzlebot/build/mobile_robotics/build/lib/mobile_robotics/__init__.py -> /home/ricard/ros2_ws_puzzlebot/install/mobile_robotics/lib/python3.10/site-packages/mobile_robotics
copying /home/ricard/ros2_ws_puzzlebot/build/mobile_robotics/build/lib/mobile_robotics/move_forward_distance.py -> /home/ricard/ros2_ws_puzzlebot/install/mobile_robotics/lib/python3.10/site-packages/mobile_robotics
copying /home/ricard/ros2_ws_puzzlebot/build/mobile_robotics/build/lib/mobile_robotics/pub_sub_with_classes.py -> /home/ricard/ros2_ws_puzzlebot/install/mobile_robotics/lib/python3.10/site-packages/mobile_robotics
copying /home/ricard/ros2_ws_puzzlebot/build/mobile_robotics/build/lib/mobile_robotics/move_angle_given.py -> /home/ricard/ros2_ws_puzzlebot/install/mobile_robotics/lib/python3.10/site-packages/mobile_robotics
copying /home/ricard/ros2_ws_puzzlebot/build/mobile_robotics/build/lib/mobile_robotics/move_square.py -> /home/ricard/ros2_ws_puzzlebot/install/mobile_robotics/lib/python3.10/site-packages/mobile_robotics
byte-compiling /home/ricard/ros2_ws_puzzlebot/install/mobile_robotics/lib/python3.10/site-packages/mobile_robotics/move_forward.py to move_forward.cpython-310.pyc
byte-compiling /home/ricard/ros2_ws_puzzlebot/install/mobile_robotics/lib/python3.10/site-packages/mobile_robotics/test_node.py to test_node.cpython-310.pyc
byte-compiling /home/ricard/ros2_ws_puzzlebot/install/mobile_robotics/lib/python3.10/site-packages/mobile_robotics/__init__.py to __init__.cpython-310.pyc
byte-compiling /home/ricard/ros2_ws_puzzlebot/install/mobile_robotics/lib/python3.10/site-packages/mobile_robotics/move_forward_distance.py to move_forward_distance.cpython-310.pyc
byte-compiling /home/ricard/ros2_ws_puzzlebot/install/mobile_robotics/lib/python3.10/site-packages/mobile_robotics/pub_sub_with_classes.py to pub_sub_with_classes.cpython-310.pyc
byte-compiling /home/ricard/ros2_ws_puzzlebot/install/mobile_robotics/lib/python3.10/site-packages/mobile_robotics/move_angle_given.py to move_angle_given.cpython-310.pyc
byte-compiling /home/ricard/ros2_ws_puzzlebot/install/mobile_robotics/lib/python3.10/site-packages/mobile_robotics/move_square.py to move_square.cpython-310.pyc
running install_data
  File "/home/ricard/ros2_ws_puzzlebot/install/mobile_robotics/lib/python3.10/site-packages/mobile_robotics/move_square.py", line 72
    self.state = "move_forward" if self.counter < 4 else self.state = "stop"
    ^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?

copying resource/mobile_robotics -> /home/ricard/ros2_ws_puzzlebot/install/mobile_robotics/share/ament_index/resource_index/packages
copying package.xml -> /home/ricard/ros2_ws_puzzlebot/install/mobile_robotics/share/mobile_robotics
copying launch/move_forward.launch.py -> /home/ricard/ros2_ws_puzzlebot/install/mobile_robotics/share/mobile_robotics/launch
running install_egg_info
Copying ../../build/mobile_robotics/mobile_robotics.egg-info to /home/ricard/ros2_ws_puzzlebot/install/mobile_robotics/lib/python3.10/site-packages/mobile_robotics-0.0.0-py3.10.egg-info
running install_scripts
Installing move_agle_given script to /home/ricard/ros2_ws_puzzlebot/install/mobile_robotics/lib/mobile_robotics
Installing move_forward script to /home/ricard/ros2_ws_puzzlebot/install/mobile_robotics/lib/mobile_robotics
Installing move_forward_distance script to /home/ricard/ros2_ws_puzzlebot/install/mobile_robotics/lib/mobile_robotics
Installing pub_sub_with_classes script to /home/ricard/ros2_ws_puzzlebot/install/mobile_robotics/lib/mobile_robotics
Installing test_node script to /home/ricard/ros2_ws_puzzlebot/install/mobile_robotics/lib/mobile_robotics
writing list of installed files to '/home/ricard/ros2_ws_puzzlebot/build/mobile_robotics/install.log'
